[gd_scene load_steps=3 format=2]

[ext_resource path="res://Rooms/TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Rooms/Room.gd" type="Script" id=2]

[node name="Room" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="BorderTileMap" type="TileMap" parent="."]
z_index = 111
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="FurnitureTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 0
collision_mask = 2
format = 1

[node name="NoneCollisionTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="Entrance" type="Node2D" parent="."]

[node name="Doors" type="Node2D" parent="."]

[node name="EnemyPositions" type="Node2D" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
